<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:text="@string/string_doctor"
                android:id="@+id/textview_doctor"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:text="@string/string_pateint"
                android:id="@+id/textview_patient"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/string_age"
                android:textColor="@android:color/black"
                android:id="@+id/textview_age"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/string_date_apmt"
                android:textColor="@android:color/black"
                android:id="@+id/textview_date"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/string_time"
                android:textColor="@android:color/black"
                android:id="@+id/textview_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/string_status"
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/textview_status"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
