<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#49000000"
    android:orientation="vertical"
    android:id="@+id/relative_book_appointment"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="10dp">


            <EditText
                android:id="@+id/edittext_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_edittext"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/black"
                android:gravity="start"
                android:hint="@string/string_name"
                android:inputType = "textCapSentences"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edittext_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edittext"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/black"
                android:hint="@string/string_age"
                android:inputType="number"
                android:padding="5dp"
                android:singleLine="true"
                android:maxLength="2"
                android:windowSoftInputMode="adjustResize" />

            <Spinner
                android:id="@+id/spinner_treatment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="true"
                android:hint="@string/string_time"
                android:padding="5dp" />


            <EditText
                android:id="@+id/edittext_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edittext"
                android:focusableInTouchMode="true"
                android:drawablePadding="10dp"
                android:hint="@string/string_date"
                android:inputType="number"
                android:padding="5dp"
                android:singleLine="true"
                android:windowSoftInputMode="adjustResize" />

            <Spinner
                android:id="@+id/spinner_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="true"
                android:hint="@string/string_time"
                android:padding="5dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/string_cancel"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/string_submit"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="17sp" />


            </LinearLayout>



        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@raw/test" />
</RelativeLayout>
